# course-description-merged

./: .gitignore  .gitmodules  Cargo.toml  README.adoc
.github/: dependabot.yml
.github/workflows/: pages.yml
src/: logging.rs  main.rs  writer.rs
src/degrees/: mod.rs  retry.rs  teachings.rs  year.rs
