[package]
name = "course-description-merged"
version = "1.0.0"
edition = "2021"


[dependencies]
chrono = "0.4.40"
color-eyre = "0.6.2"
env_logger = "0.11.6"
eyre = "0.6.12"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
substring = "1.4.5"
