# SPDX-FileCopyrightText: NONE
# SPDX-License-Identifier: CC0-1.0

[package]
name = "course-description-merged"
version = "1.0.0"
edition = "2021"


[dependencies]
chrono = "0.4.43"
color-eyre = "0.6.5"
env_logger = "0.11.8"
eyre = "0.6.12"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.29"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
substring = "1.4.5"
