# SPDX-FileCopyrightText: NONE
# SPDX-License-Identifier: CC0-1.0

[package]
name = "course-description-merged"
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
itertools = "0.14.0"
regex = "1.12.2"
reqwest = {version = "0.13", default-features = false, features = ["blocking", "rustls"]}
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
substring = "1.4.5"
